--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -24,17 +25,17 @@
 
     <!-- Favicon
     ================================================== -->
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/img/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'img/apple-touch-icon.png' %}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'img/favicon.png' %}">
 
     <!-- Stylesheets
     ================================================== -->
     <!-- Bootstrap core CSS -->
-    <link href="assets/css/bootstrap.min.css" rel="stylesheet">
+    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="assets/css/style.css" rel="stylesheet">
-    <link href="assets/css/responsive.css" rel="stylesheet">
+    <link href="{% static 'css/style.css' %}" rel="stylesheet">
+    <link href="{% static 'css/responsive.css' %}" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -45,6 +46,9 @@
 </head>
 <body>
 
+{% block main %}
+    
+    
     <header id="masthead" class="site-header" data-anchor-target=".hero" data-top="background: rgba(255,255,255,0); padding: 30px 0; box-shadow: 0px 0px 20px 6px rgba(0, 0, 0, 0);" data-top-bottom="background: rgba(255,255,255,1); padding: 10px 0; box-shadow: 0px 0px 20px 6px rgba(0, 0, 0, 0.2);">
         <nav id="primary-navigation" class="site-navigation">
             <div class="container">
@@ -56,7 +60,7 @@
                         <span class="icon-bar"></span>
                     </button>
                     
-                    <a href="#hero" class="site-logo" ><img src="assets/img/me.jpg" alt="logo" style="width: 64px; height: 48px; border-radius: 25px;" class="rounded-circle"></a>
+                    <a href="#hero" class="site-logo" ><img src="{% static 'img/me.jpg' %}" alt="logo" style="width: 64px; height: 48px; border-radius: 25px;" class="rounded-circle"></a>
 
                 </div><!-- /.navbar-header -->
 
@@ -93,7 +97,7 @@
                 </div>
             
                 <div class="col-md-6 text-right">
-                    <img src="assets/img/me.png" alt="Ahmed Abdallh">
+                    <img src="{% static 'img/me.png' %}" alt="Ahmed Abdallh">
                 </div>
 
             </div>
@@ -107,9 +111,9 @@
                 <div class="row">
                     <div class="col-md-6 col-md-offset-3">
                         <h2>About</h2>
-                        <img src="assets/img/lines.svg" class="img-lines" alt="lines">
+                        <img src="{% static 'img/lines.svg'%}" class="img-lines" alt="lines">
                         <p style="font-weight: 600;">Hello! I'm Ahmed, a full stuck developer, a Javascript enthusiast. but python has a place in my heart too. I’m currently available for freelance work. If you have a project that you want to get started or think you need my help with something, then get in touch.</p>
-                        <a href="http://www.grad.illinois.edu/sites/default/files/pdfs/cvsamples.pdf" class="btn btn-fill" target="_blank" download style="border-radius: 50px;">Download my cv</a>
+                        <a href="mycv ############" class="btn btn-fill" target="_blank" download style="border-radius: 50px;">Download my cv</a>
                     </div>
                 </div>
             </div>
@@ -119,7 +123,7 @@
             <div class="container">
                 <div class="text-center">
                     <h3>My Skills</h3>
-                    <img src="assets/img/lines.svg" class="img-lines" alt="lines">
+                    <img src="{% static 'img/lines.svg' %}" class="img-lines" alt="lines">
                 </div>
                 <div class="row">
                     <div class="col-md-4">
@@ -173,25 +177,25 @@
                 <div class="row">
                     <div class="col-md-12">
                         <h3>What i do</h3>
-                        <img src="assets/img/lines.svg" class="img-lines" alt="lines">
+                        <img src="{% static 'img/lines.svg' %}" class="img-lines" alt="lines">
                     </div>
                     <div class="col-sm-4">
                         <div class="service">
-                            <img src="assets/img/front-end.svg" alt="Front End Developer">
+                            <img src="{% static 'img/front-end.svg' %}" alt="Front End Developer">
                             <h4>Front-end</h4>
                             <p>As a javascript developer, I have experience in HTML5 and CSS3 techniques working with ready frameworks.</p>
                         </div><!-- /.service -->
                     </div>
                     <div class="col-sm-4">
                         <div class="service">
-                            <img src="assets/img/back-end.svg" alt="Back End Developer">
+                            <img src="{% static 'img/back-end.svg' %}" alt="Back End Developer">
                             <h4>Back-end</h4>
                             <p>Using django for building fullstack apps or developing Apis suits your need.</p>
                         </div><!-- /.service -->
                     </div>
                     <div class="col-sm-4">
                         <div class="service">
-                            <img src="assets/img/consultancy.svg" alt="Coding">
+                            <img src="{% static 'img/consultancy.svg'}" alt="Coding">
                             <h4>Consultancy</h4>
                             <p>As well as providing development services, I can also help you decide strategic roadmaps via consultancy services.</p>
                         </div><!-- /.service -->
@@ -204,12 +208,12 @@
             <div class="container">
                 <div class="text-center">
                     <h3>My recent Works</h3>
-                    <img src="assets/img/lines.svg" class="img-lines" alt="lines">
+                    <img src="{% static 'img/lines.svg' %}" class="img-lines" alt="lines">
                 </div>
                 <div class="row">
                     <div class="col-md-4 col-xs-6">
                         <div class="portfolio-item" >
-                            <img src="assets/img/Githuba.png" class="img-res" alt="" style="width: 90;" >
+                            <img src="{% static 'img/Githuba.png' %}" class="img-res" alt="" style="width: 90;" >
                             <div class="portfolio-item-info">
                                 <h4>Pure JavaScript App</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem1"><span class="glyphicon glyphicon-eye-open"></span></a>
@@ -219,7 +223,7 @@
                     </div>
                     <div class="col-md-4 col-xs-6">
                         <div class="portfolio-item">
-                            <img src="assets/img/video.jpg" class="img-res" alt="">
+                            <img src="{% static 'img/video.jpg' %}" class="img-res" alt="">
                             <div class="portfolio-item-info">
                                 <h4>Edited Video</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem2"><span class="glyphicon glyphicon-eye-open"></span></a>
@@ -229,7 +233,7 @@
                     </div>
                     <div class="col-md-4 col-xs-6" style="border-radius: 25px;">
                         <div class="portfolio-item">
-                            <img src="assets/img/together.png" class="img-res" alt="">
+                            <img src="{% static 'img/together.png' %}" class="img-res" alt="">
                             <div class="portfolio-item-info">
                                 <h4>UX/UI Design</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem3"><span class="glyphicon glyphicon-eye-open"></span></a>
@@ -261,28 +265,37 @@
                 </div>
             </div>
         </section><!-- /.section-counters -->
+        {% endblock main %}
 
-        <section id="contact" class="site-section section-form text-center">
-            <div class="container">
-
-                <h3>Contact</h3>
-                <img src="assets/img/lines.svg" class="img-lines" alt="lines">
-                <form>
-                    <div class="row">
-                        <div class="col-sm-6">
-                            <input type="text" name="name" class="form-control mt-x-0" placeholder="Name" required>
+        {% block contact %}
+            <section id="contact" class="site-section section-form text-center">
+                <div class="container">
+            
+                    <h3>Contact</h3>
+                    <img src="{% static 'img/lines.svg' %}" class="img-lines" alt="lines">
+                    <form action="{%  url 'contact' %}" method="POST">
+                        {% csrf_token %}
+                        {{ form.as_p }}
+                        <!-- <div class="row">
+                            <div class="col-sm-6">
+                                <input type="text" name="name" class="form-control mt-x-0" placeholder="Name" required>
+                            </div>
+                            <div class="col-sm-6">
+                                <input type="email" name="email" class="form-control" placeholder="Email" required>
+                            </div>
+                            <div class="col-sm-12">
+                                <textarea name="message" id="mesaage" class="form-control" placeholder="Message"
+                                    required></textarea>
+                            </div>
                         </div>
-                        <div class="col-sm-6">
-                            <input type="email" name="email" class="form-control" placeholder="Email" required>   
-                        </div>
-                        <div class="col-sm-12">
-                            <textarea name="message" id="mesaage" class="form-control" placeholder="Message" required></textarea>
-                        </div>
-                    </div>
-                    <button href="#" class="btn " type="submit" style="border-radius: 50px;">Contact <span class="glyphicon glyphicon-send"></span></button>
-                </form>
-            </div>
-        </section><!-- /.section-form -->
+                        <button href="#" class="btn " type="submit" style="border-radius: 50px;">Contact <span
+                                class="glyphicon glyphicon-send"></span></button> -->
+                    </form>
+                </div>
+            </section><!-- /.section-form -->
+        {% endblock contact %}
+            
+       
 
     </main><!-- /#main -->
 
@@ -311,7 +324,7 @@
         <div class="modal-content" style="border-radius: 25px;">
           <div class="modal-header">
             <a class="close" data-dismiss="modal" style="border-radius: 25px;"><span class="glyphicon glyphicon-remove"></span></a>
-            <img class="img-res" src="assets/img/portfolio-1.jpg" alt="">
+            <img class="img-res" src="{% static 'img/portfolio-1.jpg' %}" alt="">
           </div>
           <div class="modal-body">
             <h4 class="modal-title">Pure JavaScript App</h4>
@@ -329,7 +342,7 @@
         <div class="modal-content" style="border-radius: 25px;">
           <div class="modal-header">
             <a class="close" data-dismiss="modal" style="border-radius: 25px;"><span class="glyphicon glyphicon-remove"></span></a>
-            <img class="img-res" src="assets/img/portfolio-2.jpg" alt="">
+            <img class="img-res" src="{% static 'img/portfolio-2.jpg' %}" alt="">
           </div>
           <div class="modal-body">
             <h4 class="modal-title">Edited Video</h4>
@@ -347,7 +360,7 @@
         <div class="modal-content" style="border-radius: 25px;">
           <div class="modal-header">
             <a class="close" data-dismiss="modal" style="border-radius: 25px;"><span class="glyphicon glyphicon-remove"></span></a>
-            <img class="img-res" src="assets/img/portfolio-3.jpg" alt="">
+            <img class="img-res" src="{% static 'img/portfolio-3.jpg' %}" alt="">
           </div>
           <div class="modal-body">
             <h4 class="modal-title">UX/UI Design</h4>
@@ -364,12 +377,12 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
+    <script src="{% static 'css/js/bootstrap.min.js' %}"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
-    <script src="assets/js/skrollr.min.js"></script>
+    <script src="{% static 'js/js/skrollr.min.js' %}"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-progressbar/0.9.0/bootstrap-progressbar.min.js"></script>
-    <script src="assets/js/jquery.countTo.min.js"></script>
-    <script src="assets/js/script.js"></script>
+    <script src="{% static 'js/js/jquery.countTo.min.js' %}"></script>
+    <script src="{% static 'js/script.js' %}"></script>
   
 </body>
 </html>
