--- a/templates/index.html
+++ b/templates/index.html
@@ -275,21 +275,9 @@
                     <img src="{% static 'img/lines.svg' %}" class="img-lines" alt="lines">
                     <form action="{%  url 'contact' %}" method="POST">
                         {% csrf_token %}
-                        {{ form.as_p }}
-                        <!-- <div class="row">
-                            <div class="col-sm-6">
-                                <input type="text" name="name" class="form-control mt-x-0" placeholder="Name" required>
-                            </div>
-                            <div class="col-sm-6">
-                                <input type="email" name="email" class="form-control" placeholder="Email" required>
-                            </div>
-                            <div class="col-sm-12">
-                                <textarea name="message" id="mesaage" class="form-control" placeholder="Message"
-                                    required></textarea>
-                            </div>
-                        </div>
+                        <div class="col-sm-12">{{ form.as_p }}</div>
                         <button href="#" class="btn " type="submit" style="border-radius: 50px;">Contact <span
-                                class="glyphicon glyphicon-send"></span></button> -->
+                                class="glyphicon glyphicon-send"></span></button>
                     </form>
                 </div>
             </section><!-- /.section-form -->
